@@ -1,3 +1,8 @@
+2004-05-09  Per Bothner  <per@bothner.com>
+
+	* ReaderParens.java (readList):  For list as a whole, set line/column
+	to that of the initial paren, not the first car.
+
 2004-05-04  Per Bothner  <per@bothner.com>
 
 	* LispReader.java (readSimpleVector): Allow zero-length
